font issue resolved by adding extra padding on top

--- a/styles/atoms.css
+++ b/styles/atoms.css
@@ -21,19 +21,19 @@
     background-color: #000;
     border: solid #000 1px;
     color: #fff;
-    padding: 20px 70px;
+    padding: 25px 70px 20px 70px;
 }
 .button--primary2 {
     background-color: var(--sundance__primary2);
     border: solid var(--sundance__primary2) 1px;
     color: #fff;
-    padding: 20px 70px;
+    padding: 25px 70px 20px 70px;
 }
 .button--secondary {
     background-color: #fff;
     border: solid #000 1px;
     color: #000;
-    padding: 20px 70px;
+    padding: 25px 70px 20px 70px;
 }
 
 .icon-button{
